...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ejb-vB-4ds">
                                                <rect key="frame" x="20" y="20" width="656" height="30"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dup-LH-iX1">
                                                        <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="removeFromCart" label="Remove From Cart"/>
                                                        <state key="normal" title="Remove from Cart"/>
                                                        <connections>
                                                            <action selector="removeFromCart:" destination="aFl-j4-ZEj" eventType="touchUpInside" id="Ic6-DY-vtE"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l13-CH-jn8">
                                                        <rect key="frame" x="577" y="0.0" width="79" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="addToCart" label="Add to Cart"/>
                                                        <state key="normal" title="Add to Cart"/>
                                                        <connections>
                                                            <action selector="AddToCart:" destination="aFl-j4-ZEj" eventType="touchUpInside" id="SZV-r8-ZCo"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
...
